<?xml version="1.0"?>
<package format="2">
  <name>trochoids</name>
  <version>0.1.0</version>
  <description>Time-Optimal Path Planning in a Constant Wind for Uncrewed Aerial Vehicles using Dubins Set Classification</description>

 <maintainer email="bradym@andrew.cmu.edu">Brady Moon</maintainer>

  <license>Clear BSD License</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cmake_modules</depend>
  <build_depend>roslint</build_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
